@@ -17,7 +17,7 @@ my $pub_date     = &POSIX::strftime( DATE_TEMPLATE_PUB,   gmtime );
 ok( $current_date, "Current date: $current_date" );
 
 use constant RSS_VERSION    => "2.0";
-use constant RSS_SAVEAS     => "t/" . RSS_VERSION . "-generated.xml";
+use constant RSS_SAVEAS     => "t/generated/" . RSS_VERSION . "-generated.xml";
 
 use constant RSS_MOD_PREFIX => "my";
 use constant RSS_MOD_URI    => 'http://purl.org/my/rss/module/';
